fix table overflow in timeline

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4058,7 +4058,7 @@ a.copyright {
       margin-bottom: 55px;
    }
 
-   .item_content img {
+   .item_content img, table {
       max-width: 100%;
    }
 }
